--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E64a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="D3X-u2-Ydb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="D3X-u2-Ydb">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -37,25 +37,17 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="8EL-55-HIy">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </mapView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xc3-eL-cFF">
-                                <rect key="frame" x="154" y="125" width="292" height="165"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="8EL-55-HIy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="1VF-JK-Lxi"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Xc3-eL-cFF" secondAttribute="bottom" constant="310" id="4Vu-ha-cO9"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Xc3-eL-cFF" secondAttribute="trailing" constant="134" id="EaJ-JS-ZKd"/>
                             <constraint firstItem="8EL-55-HIy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="EpX-8Q-lq8"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8EL-55-HIy" secondAttribute="trailing" constant="-20" id="Sto-Mx-gKt"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8EL-55-HIy" secondAttribute="bottom" id="gkO-g2-ZsI"/>
-                            <constraint firstItem="Xc3-eL-cFF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="134" id="p7e-Eg-wCg"/>
-                            <constraint firstItem="Xc3-eL-cFF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="105" id="tFj-0U-eLA"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Virtual Tourist" id="bse-sX-WiB"/>
                     <connections>
-                        <outlet property="imageTest" destination="Xc3-eL-cFF" id="SRn-wZ-Say"/>
                         <outlet property="map" destination="8EL-55-HIy" id="lwg-tg-PGw"/>
                     </connections>
                 </viewController>
@@ -95,22 +87,114 @@
             </objects>
             <point key="canvasLocation" x="1340" y="444"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="frw-wd-6K9">
+        <!--Photo Collection View Controller-->
+        <scene sceneID="aQo-yQ-OQp">
             <objects>
-                <viewController id="lny-Fl-l43" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PhotoCollectionViewController" id="j82-BF-mG2" customClass="PhotoCollectionViewController" customModule="Virtual_Tourist" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="MTe-Hn-cxU"/>
-                        <viewControllerLayoutGuide type="bottom" id="UXg-xE-0o5"/>
+                        <viewControllerLayoutGuide type="top" id="GJF-lp-jch"/>
+                        <viewControllerLayoutGuide type="bottom" id="sCJ-13-DBv"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="nyH-E7-hkr">
+                    <view key="view" contentMode="scaleToFill" id="kPN-yd-Grb">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JK4-Ho-wVR">
+                                <rect key="frame" x="0.0" y="28" width="600" height="136"/>
+                            </mapView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRu-3K-n3R">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Ghc-Iq-ZPu"/>
+                                    <barButtonItem style="plain" id="VjH-rx-MYl">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1xW-xv-mBB">
+                                            <rect key="frame" x="277" y="7" width="46" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" title="Button"/>
+                                        </button>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="NAs-SB-eav"/>
+                                </items>
+                            </toolbar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="l0r-yR-0nW">
+                                <rect key="frame" x="0.0" y="163" width="600" height="437"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5Eo-of-Vds">
+                                    <size key="itemSize" width="115" height="115"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="B1z-95-Z4w" customClass="PhotoCell" customModule="Virtual_Tourist" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlaceHolderImage" translatesAutoresizingMaskIntoConstraints="NO" id="itB-Lu-He1">
+                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailingMargin" secondItem="itB-Lu-He1" secondAttribute="trailing" constant="-8" id="3eC-sw-T8v"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="itB-Lu-He1" secondAttribute="bottom" constant="-8" id="83w-U0-GMm"/>
+                                            <constraint firstItem="itB-Lu-He1" firstAttribute="leading" secondItem="B1z-95-Z4w" secondAttribute="leadingMargin" constant="-8" id="nBj-dB-xcI"/>
+                                            <constraint firstItem="itB-Lu-He1" firstAttribute="top" secondItem="B1z-95-Z4w" secondAttribute="topMargin" constant="-8" id="o3Q-Tx-n1R"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="cellImageView" destination="itB-Lu-He1" id="1Y3-xN-03w"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JK4-Ho-wVR" firstAttribute="top" secondItem="kPN-yd-Grb" secondAttribute="topMargin" constant="28" id="6fh-rt-X2t"/>
+                            <constraint firstItem="sCJ-13-DBv" firstAttribute="top" secondItem="l0r-yR-0nW" secondAttribute="bottom" id="LRr-6A-CDa"/>
+                            <constraint firstItem="l0r-yR-0nW" firstAttribute="leading" secondItem="kPN-yd-Grb" secondAttribute="leadingMargin" constant="-20" id="Lzd-m2-EHe"/>
+                            <constraint firstItem="l0r-yR-0nW" firstAttribute="top" secondItem="GJF-lp-jch" secondAttribute="bottom" constant="143" id="NfH-xt-Anc"/>
+                            <constraint firstItem="xRu-3K-n3R" firstAttribute="top" secondItem="JK4-Ho-wVR" secondAttribute="bottom" constant="392" id="QC7-KL-SAp"/>
+                            <constraint firstItem="sCJ-13-DBv" firstAttribute="top" secondItem="xRu-3K-n3R" secondAttribute="bottom" id="Qox-8R-gI8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JK4-Ho-wVR" secondAttribute="trailing" constant="-20" id="UBe-21-HYv"/>
+                            <constraint firstItem="sCJ-13-DBv" firstAttribute="top" secondItem="JK4-Ho-wVR" secondAttribute="bottom" constant="436" id="bMG-kL-xwk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xRu-3K-n3R" secondAttribute="trailing" constant="-20" id="dUI-hk-WBH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="l0r-yR-0nW" secondAttribute="trailing" constant="-20" id="g50-8W-wCU"/>
+                            <constraint firstItem="xRu-3K-n3R" firstAttribute="leading" secondItem="kPN-yd-Grb" secondAttribute="leadingMargin" constant="-20" id="hiY-SM-P6h"/>
+                            <constraint firstItem="JK4-Ho-wVR" firstAttribute="leading" secondItem="kPN-yd-Grb" secondAttribute="leadingMargin" constant="-20" id="qZm-pL-L9s"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="barButton" destination="xRu-3K-n3R" id="qaN-ZX-K2M"/>
+                        <outlet property="collectionView" destination="l0r-yR-0nW" id="OAD-8F-96H"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oOZ-Ys-Wc2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1964" y="444"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="EzU-JG-ofh">
+            <objects>
+                <viewController id="Oy8-n0-DWU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nRB-Y7-fsZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="5uh-zk-JyR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YxQ-lH-lcu">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yZz-cW-u1k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LsO-8p-5uH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="PlaceHolderImage" width="640" height="480"/>
+    </resources>
 </document>
